--- a/skeleton-es2016/src/routes/auth/login.html
+++ b/skeleton-es2016/src/routes/auth/login.html
@@ -32,9 +32,6 @@
             <hr>
           </div>
         </form>
-  <button class="btn btn-block btn-facebook" click.delegate="authenticate('identSrv', true)">
-          <i class="ion-social-facebook"></i> Sign in with IdentityServer
-        </button>
         <button class="btn btn-block btn-facebook" click.delegate="authenticate('facebook', true)">
           <i class="ion-social-facebook"></i> Sign in with Facebook
         </button>
@@ -44,10 +41,14 @@
         <button class="btn btn-block btn-linkedin" click.delegate="authenticate('linkedin', true)">
           <i class="ion-social-linkedin"></i> Sign in with LinkedIn
         </button>
-        <button class="btn btn-block btn-twitter" click.delegate="authenticate('twitter', true)">
+        <!-- <button class="btn btn-block btn-twitter" click.delegate="authenticate('twitter', true)">
           <i class="ion-social-twitter"></i> Sign in with Twitter
         </button>
-        <!-- <button class="btn btn-block btn-foursquare" click.delegate="authenticate('foursquare')">
+
+        <button class="btn btn-block btn-facebook" click.delegate="authenticate('identSrv', true)">
+          <i class="ion-social-facebook"></i> Sign in with IdentityServer
+        </button>
+        <button class="btn btn-block btn-foursquare" click.delegate="authenticate('foursquare')">
           <i class="fa fa-foursquare"></i> Sign in with Foursquare
         </button>
         <button class="btn btn-block btn-github" click.delegate="authenticate('github')">
