--- a/skeleton-es2016/src/routes/child-router/index.html
+++ b/skeleton-es2016/src/routes/child-router/index.html
@@ -10,7 +10,7 @@
         </ul>
       </div>
       <div class="col-md-10" style="padding: 0">
-        <router-view></router-view>
+        <router-view swap-order="after"></router-view>
       </div>
     </div>
   </section>
